--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div class="tr">
-  <button mat-raised-button color="accent" style="margin:10px 1%" (click)="addNewEmail()">Add New Email</button>
+  <button mat-raised-button color="accent" style="margin:10px 1%" (click)="addNewEmail()" matTooltip="Add Email">Add New Email</button>
 
 </div>
 <table class="emp-table">
@@ -21,8 +21,8 @@
     </td>
   
     <td class="update">
-      <mat-icon class="mr-15 color-green" aria-hidden="false" aria-label="Example edit icon" (click)="updateEmail()">edit</mat-icon>
-      <mat-icon class="color-red" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
+      <mat-icon class="mr-15 color-green" aria-hidden="false" aria-label="Example edit icon"  matTooltip="Edit Email" (click)="updateEmail()">edit</mat-icon>
+      <mat-icon class="color-red" aria-hidden="false" aria-label="Example delete icon"  matTooltip="Delete Email" (click)="deleteEmail()">delete</mat-icon>
       </td>
   </tr>
 </tbody>
