--- a/src/app/edit-email/edit-email.component.html
+++ b/src/app/edit-email/edit-email.component.html
@@ -4,5 +4,5 @@
       </mat-form-field>
   </form>
   <div class="form-element">
-    <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!form.valid" (click)="addEmail(user)">Save</button>
+    <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!form.valid" (click)="updateEmail(user)">Update</button>
   </div>
